# utfx.hpp

./: .clangd  .cursorignore  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md
.ai/: system_prompt.md
.github/workflows/: cmake-multi-platform.yml  msys2.yml
include/utfx/: utfx.hpp
tests/: CMakeLists.txt  detail_test.cc  edge_test.cc  emoji_sequences.h  emoji_test.cc  unittests.cc  utf8_types_test.cc
